--- a/requirements.txt
+++ b/requirements.txt
@@ -5,13 +5,16 @@ certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
 contextlib2==0.5.4
+croniter==0.3.19
 dominate==2.3.1
 Flask==0.12.2
 Flask-Bootstrap==3.3.7.1
 Flask-Caching==1.3.2
+Flask-CLI==0.4.0
 Flask-Login==0.4.0
 Flask-Mail==0.9.1
 Flask-Migrate==2.1.1
+Flask-RQ2==17.0
 Flask-Script==2.0.5
 Flask-SQLAlchemy==2.3.0
 Flask-SSLify==0.1.5
@@ -32,6 +35,8 @@ rauth==0.7.3
 raven==6.2.1
 redis==2.10.5
 requests==2.18.4
+rq==0.6.0
+rq-scheduler==0.7.0
 Shapely==1.6b4
 six==1.11.0
 SQLAlchemy==1.1.14
